Feature code fix (#23)
* fix for oid fetching

* authorization based on organizer status

*  can not log in as unconfirmed organizer

* api update
