# src/main/java/com/team3/central/controllers/EventsApiImpl.java
@@ -2,10 +2,13 @@ package com.team3.central.controllers;
 
 import com.team3.central.openapi.api.EventsApi;
 import com.team3.central.openapi.model.Event;
+import com.team3.central.openapi.model.EventForm;
+import com.team3.central.openapi.model.EventWithPlaces;
 import com.team3.central.repositories.entities.OrganizerEntity;
 import com.team3.central.services.CategoryService;
 import com.team3.central.services.EventService;
 import com.team3.central.services.OrganizerService;
+import com.team3.central.services.exceptions.NotFoundException;
 import io.swagger.annotations.ApiParam;
 import java.util.List;
 import java.util.Optional;
@@ -32,39 +35,21 @@ public class EventsApiImpl implements EventsApi {
 
   /**
    *
-   * User needs to be authorized
+   * User needs to be authenticated
    *
    * POST /events : Add new event
    *
-   * POST /events : Add new event
-   *
-   * @param title title of Event (required)
-   * @param name title of Event (required)
-   * @param freePlace No of free places (required)
-   * @param startTime Unix time stamp of begin of event (required)
-   * @param endTime Unix time stamp of end of event (required)
-   * @param latitude Latitude of event (required)
-   * @param longitude Longitude of event (required)
-   * @param categories Array of id of categories that event belong to. (required)
-   * @param placeSchema seralized place schema (optional)
+   * @param eventForm Add event (optional)
    * @return event created (status code 201)
-   *         or event can not be created (status code 400)
+   *         or event can not be created, field invalid (status code 400)
+   *         or invalid session (status code 403)
    */
   @Override
-  public ResponseEntity<Event> addEvent(
-      @NotNull @ApiParam(value = "title of Event", required = true) @Valid @RequestParam(value = "title", required = true) String title,
-      @NotNull @ApiParam(value = "title of Event", required = true) @Valid @RequestParam(value = "name", required = true) String name,
-      @NotNull @ApiParam(value = "No of free places", required = true) @Valid @RequestParam(value = "freePlace", required = true) Integer freePlace,
-      @NotNull @ApiParam(value = "Unix time stamp of begin of event", required = true) @Valid @RequestParam(value = "startTime", required = true) Integer startTime,
-      @NotNull @ApiParam(value = "Unix time stamp of end of event", required = true) @Valid @RequestParam(value = "endTime", required = true) Integer endTime,
-      @NotNull @ApiParam(value = "Latitude of event", required = true) @Valid @RequestParam(value = "latitude", required = true) String latitude,
-      @NotNull @ApiParam(value = "Longitude of event", required = true) @Valid @RequestParam(value = "longitude", required = true) String longitude,
-      @NotNull @ApiParam(value = "Unix time stamp of end of event", required = true) @Valid @RequestParam(value = "categories", required = true) List<Integer> categories,
-      @ApiParam(value = "serialized place schema") @Valid @RequestParam(value = "placeSchema", required = false) String placeSchema) {
+  public ResponseEntity<Event> addEvent(@ApiParam(value = "Add event") @Valid @RequestBody(required = false) EventForm eventForm) {
     UserDetails userDetails = getUserDetails();
     OrganizerEntity organizer = organizerService.getOrganizerFromEmail(userDetails.getUsername()).get();
-    Event event = eventService.addEvent(title, name, freePlace, startTime, endTime, latitude, longitude,
-        categoryService.getCategoriesFromIds(categories), placeSchema, organizer);
+    Event event = eventService.addEvent(eventForm.getTitle(), eventForm.getName(), eventForm.getMaxPlace(), eventForm.getStartTime(), eventForm.getEndTime(), eventForm.getLatitude(), eventForm.getLongitude(),
+        categoryService.getCategoriesFromIds(eventForm.getCategoriesIds()), eventForm.getPlaceSchema(), organizer);
     return new ResponseEntity<>(event ,HttpStatus.OK);
   }
 
@@ -107,13 +92,13 @@ public class EventsApiImpl implements EventsApi {
    *         or Event not found (status code 404)
    */
   @Override
-  public ResponseEntity<Event> getEventById(
+  public ResponseEntity<EventWithPlaces> getEventById(
       @ApiParam(value = "ID of event to return", required = true) @PathVariable("id") Long id) {
     try {
-      Optional<Event> event = eventService.getById(id);
+      Optional<EventWithPlaces> event = eventService.getById(id);
       if(event.isEmpty()) return new ResponseEntity<>(HttpStatus.NOT_FOUND);
       else return new ResponseEntity<>(event.get(),HttpStatus.OK);
-    } catch (IndexOutOfBoundsException exception) {
+    } catch (NotFoundException exception) {
       return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
     }
   }
@@ -141,25 +126,6 @@ public class EventsApiImpl implements EventsApi {
     UserDetails userDetails = getUserDetails();
     if(userDetails == null) return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     return new ResponseEntity<>(eventService.getForUser(userDetails.getUsername()), HttpStatus.OK);
-  }
-
-  /**
-   *
-   * User needs to be authorized
-   *
-   * PATCH /events/{id} : patch existing event
-   *
-   * @param id id of Event (required)
-   * @param event Update an existent user in the store (optional)
-   * @return patched (status code 202)
-   *         or id not found (status code 404)
-   */
-  @Override
-  public ResponseEntity<Void> patchEvent(
-      @ApiParam(value = "id of Event", required = true) @PathVariable("id") String id,
-      @ApiParam(value = "Update an existent user in the store") @Valid @RequestBody(required = false) Event event) {
-    return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
   }
 
   private UserDetails getUserDetails() {
