# src/main/resources/contracts/api.yml
@@ -7,7 +7,7 @@ info:
     email: XXX@pw.edu.pl
   version: 1.0.0
 servers:
-  - url: https://pw.edu.pl/api/v3
+  - url: https://yourbackenhosting.edu.pl
 tags:
   - name: Event organizer
     description: API for web organizer portal
@@ -38,69 +38,12 @@ paths:
         - Event
       summary: Add new event
       operationId: addEvent
-      parameters:
-        - name: title
-          in: query
-          description: title of Event
-          required: true
-          schema:
-            type: string
-            example: Short description of Event
-        - name: name
-          in: query
-          description: title of Event
-          required: true
-          schema:
-            type: string
-            example: Long description of Event
-        - name: freePlace
-          in: query
-          description: No of free places
-          required: true
-          schema:
-            type: integer
-        - name: placeSchema
-          in: query
-          description: serialized place schema
-          required: false
-          schema:
-            type: string
-        - name: startTime
-          in: query
-          description: Unix time stamp of begin of event
-          required: true
-          schema:
-            type: integer
-            example: 1683034164
-        - name: endTime
-          in: query
-          description: Unix time stamp of end of event
-          required: true
-          schema:
-            type: integer
-            example: 1683034164
-        - name: latitude
-          in: query
-          description: Latitude of event
-          required: true
-          schema:
-            type: string
-            example: '40.4775315'
-        - name: longitude
-          in: query
-          description: Longitude of event
-          required: true
-          schema:
-            type: string
-            example: '-3.7051359'
-        - name: categories
-          in: query
-          description: Array of id of categories that event belong to.
-          required: true
-          schema:
-            type: array
-            items:
-              type: integer
+      requestBody:
+        description: Add event
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EventForm'
       responses:
         '201':
           description: event created
@@ -109,7 +52,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Event'
         '400':
-          description: event can not be created
+          description: event can not be created, field invalid
+        '403':
+          description: invalid session
       security:
         - token: []
   /events/my:
@@ -127,6 +72,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Event'
+        '403':
+          description: invalid session
       security:
         - token: []
   /events/{id}:
@@ -150,7 +97,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Event'
+                $ref: '#/components/schemas/EventWithPlaces'
         '400':
           description: Invalid ID supplied
         '404':
@@ -170,6 +117,8 @@ paths:
       responses:
         '204':
           description: deleted
+        '403':
+          description: invalid session
         '404':
           description: id not found
       security:
@@ -191,10 +140,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Event'
+              $ref: '#/components/schemas/EventPatch'
       responses:
+        '200':
+          description: nothing to do, no field to patch
         '202':
           description: patched
+        '400':
+          description: invalid id or fields in body
+        '403':
+          description: invalid session
         '404':
           description: id not found
       security:
@@ -207,7 +162,7 @@ paths:
       operationId: getByCategory
       parameters:
         - name: categoryId
-          in: query
+          in: header
           description: ID of category
           required: true
           schema:
@@ -246,7 +201,7 @@ paths:
       operationId: addCategories
       parameters:
         - name: categoryName
-          in: query
+          in: header
           description: name of category
           required: true
           schema:
@@ -260,6 +215,8 @@ paths:
                 $ref: '#/components/schemas/Category'
         '400':
           description: category already exist
+        '403':
+          description: invalid session
       security:
         - token: []
   /reservation:
@@ -270,14 +227,14 @@ paths:
       operationId: makeReservation
       parameters:
         - name: eventId
-          in: query
+          in: header
           description: ID of event
           required: true
           schema:
             type: integer
             format: int64
         - name: placeID
-          in: query
+          in: header
           description: ID of place
           required: false
           schema:
@@ -291,7 +248,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ReservationDTO'
         '400':
-          description: no free place
+          description: no free place or place taken
         '404':
           description: event not exist or done
     delete:
@@ -301,7 +258,7 @@ paths:
       operationId: deleteReservation
       parameters:
         - name: reservationToken
-          in: query
+          in: header
           description: token of reservation
           required: true
           schema:
@@ -318,25 +275,12 @@ paths:
         - Event organizer
       summary: Create orginizer account
       operationId: signUp
-      parameters:
-        - name: name
-          in: query
-          description: name of Organizer
-          required: true
-          schema:
-            type: string
-        - name: email
-          in: query
-          description: email of Organizer
-          required: true
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: password of Organizer
-          required: true
-          schema:
-            type: string
+      requestBody:
+        description: Add event
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrganizerForm'
       responses:
         '201':
           description: successful operation
@@ -345,7 +289,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Organizer'
         '400':
-          description: organizer already exist
+          description: email already in use
     get:
       tags:
         - Event organizer
@@ -358,7 +302,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Organizer'
-        '400':
+        '403':
           description: invalid session
       security:
         - token: []
@@ -376,20 +320,20 @@ paths:
           schema:
             type: string
         - name: code
-          in: query
+          in: header
           description: code from email
           required: true
           schema:
             type: string
       responses:
-        '201':
+        '200':
+          description: nothing to do, account already confirmed
+        '202':
           description: account confirmed
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Organizer'
         '400':
           description: code wrong
+        '404':
+          description: organizer id not found
     delete:
       tags:
         - Event organizer
@@ -405,6 +349,8 @@ paths:
       responses:
         '204':
           description: deleted
+        '403':
+          description: invalid session
         '404':
           description: id not found
       security:
@@ -426,10 +372,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Organizer'
+              $ref: '#/components/schemas/OrganizerPatch'
       responses:
+        '200':
+          description: nothing to do, no field to patch
         '202':
           description: patched
+        '400':
+          description: invalid email or password
+        '403':
+          description: invalid session
         '404':
           description: id not found
       security:
@@ -443,13 +395,13 @@ paths:
       operationId: loginOrganizer
       parameters:
         - name: email
-          in: query
+          in: header
           description: The organizer email for login
           required: true
           schema:
             type: string
         - name: password
-          in: query
+          in: header
           description: the password
           required: true
           schema:
@@ -466,12 +418,23 @@ paths:
                     type: string
                     description: The session token.
         '400':
-          description: Invalid email/password supplied
+          description: Invalid email or password
+
 components:
   schemas:
     Event:
       required:
         - id
+        - title
+        - name
+        - startTime
+        - endTime
+        - latitude
+        - longitude
+        - maxPlace
+        - categories
+        - status
+        - freePlace
       type: object
       properties:
         id:
@@ -498,9 +461,64 @@ components:
         name:
           type: string
           example: Long description of Event
+        status:
+          $ref: '#/components/schemas/EventStatus'
+        categories:
+          type: array
+          items:
+            $ref: '#/components/schemas/Category'
+        freePlace:
+          type: integer
+          format: int64
+          example: 2
+        maxPlace:
+          type: integer
+          format: int64
+          example: 100
         placeSchema:
           type: string
           example: Seralized place schema
+
+    EventWithPlaces:
+      required:
+        - id
+        - title
+        - name
+        - startTime
+        - endTime
+        - latitude
+        - longitude
+        - maxPlace
+        - categories
+        - status
+        - freePlace
+        - places
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 10
+        title:
+          type: string
+          example: Short description of Event
+        startTime:
+          type: integer
+          format: int64
+          example: 1673034164
+        endTime:
+          type: integer
+          format: int64
+          example: 1683034164
+        latitude:
+          type: string
+          example: '40.4775315'
+        longitude:
+          type: string
+          example: '-3.7051359'
+        name:
+          type: string
+          example: Long description of Event
         status:
           $ref: '#/components/schemas/EventStatus'
         categories:
@@ -519,9 +537,100 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Place'
+        placeSchema:
+          type: string
+          example: Seralized place schema
+
+    EventForm:
+      type: object
+      required:
+        - title
+        - name
+        - startTime
+        - endTime
+        - latitude
+        - longitude
+        - maxPlace
+        - categoriesIds
+      properties:
+        title:
+          type: string
+          example: Short description of Event
+        name:
+          type: string
+          example: Long description of Event
+        startTime:
+          type: integer
+          format: int64
+          example: 1673034164
+        endTime:
+          type: integer
+          format: int64
+          example: 1683034164
+        latitude:
+          type: string
+          example: '40.4775315'
+        longitude:
+          type: string
+          example: '-3.7051359'
+        placeSchema:
+          type: string
+          example: Seralized place schema
+        maxPlace:
+          type: integer
+          format: int64
+          example: 2
+        categoriesIds:
+          type: array
+          items:
+            type: integer
+            example: [1,2,3]
+          minItems: 0
+
+    EventPatch:
+      #All field are optional
+      type: object
+      properties:
+        title:
+          type: string
+          example: Short description of Event
+        name:
+          type: string
+          example: Long description of Event
+        startTime:
+          type: integer
+          format: int64
+          example: 1673034164
+        endTime:
+          type: integer
+          format: int64
+          example: 1683034164
+        latitude:
+          type: string
+          example: '40.4775315'
+        longitude:
+          type: string
+          example: '-3.7051359'
+        placeSchema:
+          type: string
+          example: Seralized place schema
+        maxPlace:
+          type: integer
+          format: int64
+          example: 2
+        categoriesIds:
+          type: array
+          items:
+            type: integer
+            example: [1,2,3]
+          minItems: 0
+
 
     Place:
       type: object
+      required:
+        - id
+        - free
       properties:
         id:
           type: integer
@@ -534,6 +643,9 @@ components:
 
     Category:
       type: object
+      required:
+        - id
+        - name
       properties:
         id:
           type: integer
@@ -542,6 +654,7 @@ components:
         name:
           type: string
           example: Sport
+
     EventStatus:
       type: string
       description: event status
@@ -551,8 +664,13 @@ components:
         - done
         - cancelled
       example: done
+
     ReservationDTO:
       type: object
+      required:
+        - eventId
+        - placeId
+        - reservationToken
       properties:
         eventId:
           type: integer
@@ -565,8 +683,14 @@ components:
         reservationToken:
           type: string
           example: df0d69cbe68fb6e2b27aa88f6f94497e
+
     Organizer:
       type: object
+      required:
+        - id
+        - name
+        - email
+        - status
       properties:
         id:
           type: integer
@@ -578,19 +702,40 @@ components:
         email:
           type: string
           example: john@email.com
-        password:
-          type: string
-          example: '12345'
-        events:
-          type: array
-          items:
-            $ref: '#/components/schemas/Event'
         status:
           type: string
           description: User Status
           enum:
             - pending
             - confirmed
+
+    OrganizerForm:
+      type: object
+      required:
+        - name
+        - email
+        - password
+      properties:
+        name:
+          type: string
+          example: theUser
+        email:
+          type: string
+          example: john@email.com
+        password:
+          type: string
+          example: '12345'
+
+    OrganizerPatch:
+      type: object
+      properties:
+        name:
+          type: string
+          example: NewUserName
+        password:
+          type: string
+          example: 'myNewPassword'
+
   securitySchemes:
     token:
       type: apiKey
